룸메찾기 write 반응형 하는 중

--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 
-<div class="view_container">
+<div class="col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
     <p class="view_info">{{ post.preface }} | {{ post.preface_2 }}</p>
     <div class="view_box1">
         <h3>{{ post.title }}</h3>
