--- a/roommate/templates/create.html
+++ b/roommate/templates/create.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 <body>
-<div class="info_container">
+<div class="info_container col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
 	<h3>룸메찾기 게시판</h3>
     <form action="" method="POST" enctype="multipart/form-data">
 		<div class="info_container-box1">
@@ -27,7 +27,7 @@
         <textarea class="body" name="body" required id="id_body" cols="40" rows="10" style="resize: none;"
         placeholder="이곳에 본문을 작성하세요."></textarea>
 
-        <button  id="submit"  type="submit">제출</button>
+        <button class="" id="submit"  type="submit">제출</button>
     </form> 
 </div>
 </body>
