--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -11,7 +11,8 @@
     <div class="view_box1">
         <h3>{{ post.title }}</h3>
         <form action="" method="GET">
-            <button id="Favorites" type="submit" name="Favorites" value="scrap">스크랩</button>
+            <button class="scrapBtn" id="Favorites" type="submit" name="Favorites" value="scrap">
+                <i class="far fa-star" id="star"></i></button>
         </form>
         <!-- 타이틀 -->
         <small>{{ post.pub_date }}</small>
@@ -44,5 +45,24 @@
         </ul>
     </div>
 </div>
+<div class="popup">
+    <h4> 스크랩 완료! </h4>
+    <div class="popup-close">&times;</div>
+</div>
 
+<script>
+    const scrapBtn = document.querySelector('.scrapBtn');
+    const popup = document.querySelector('.popup');
+
+    popup.style.display="none";
+    function open(){ 
+        scrapBtn.addEventListener('click', function (event){ 
+        popup.style.display = 'block';  
+        })
+    } 
+    open();
+    document.querySelector(".popup-close").onclick = function() {
+        document.querySelector(".popup").style.display="none";
+        }
+</script>
 {% endblock %}
