--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -11,11 +11,10 @@
     <div class="view_box1">
         <h3>{{ post.title }}</h3>
         <form action="" method="GET">
-            <button id="Favorites" type="submit" name="Favorites" value="scrap">스크랩</button>
+            <button id="Favorites" type="submit" name="Favorites" value="scrap">
+                <i class="far fa-star" id="star"></i></button>
         </form>
         <!-- 타이틀 -->
-        <button class="scrapBtn" >
-            <i class="far fa-star" id="star"></i></button>
         <small>{{ post.pub_date }}</small>
         <!-- <i class="fas fa-star" id="fillStar"></i> -->
     </div>
