--- a/static/css/login.css
+++ b/static/css/login.css
@@ -63,7 +63,7 @@
     color: transparent;
 }
 .login-box{
-    width:  25vw;
+    width:  30vw;
     margin: 0px auto;
 }
 .login-box input{
@@ -91,14 +91,18 @@
     width: 100%;
     border-bottom: 2px solid #C9C9C9;
 }
-#login_btn{
+.btn-box{
+    display: flex;
+    flex-direction: row;
+}
+.btn-box #login_btn{
     background: #FFFFFF;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.25);
     border: 0px solid white;
     display: inline;
-    width: 10vw;
+    width: 13vw;
     height: 53px;
-    margin-right: 4vw;
+    margin-right: 3vw;
     font-family: 'S-CoreDream-7ExtraBold';
     background: #3F97FF;
     border-radius: 10px;
@@ -106,8 +110,8 @@
     font-size: 20px;
     line-height: 24px;
 }
-#kakao-login{
-    width: 10vw;
+.btn-box #kakao-login{
+    width: 13vw;
     height: 53px;
     font-family: 'S-CoreDream-7ExtraBold';
     font-size: 15px;
@@ -117,3 +121,55 @@
     box-sizing: border-box;
     border-radius: 10px;
 }
+/*
+@media screen and (min-width: 567px){
+    .title-login{
+        width: 20%;
+        left: -300px;
+    }
+}
+*/
+@media screen and (max-width: 768px){
+    .container{
+        padding-top: 0;
+    }
+    .login{
+        width: 100%;
+    }
+    .title-login{
+        width: 30%;
+        margin: 0 auto 0 auto;
+    }
+    .login-box{
+        width: 100%;
+    }
+    .login-box form{
+        margin: 0 auto 0 auto;
+        width: 50%;
+    }
+    .popup-overlay{
+        width: 100%;
+        height: 100%;
+    }
+    .btn-box{
+        display: flex;
+        flex-direction: column;
+    }
+    .btn-box #login_btn{
+        width: 100%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    .btn-box #kakao-login{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .popup{
+        top: 50%;
+        left: 50%;
+        width: 300px;
+        height: 130px;
+        padding-top: 20px;
+    }
+
+ }
