룸메이트 create 모바일버전 완료

--- a/roommate/templates/create.html
+++ b/roommate/templates/create.html
@@ -7,7 +7,7 @@
 {% block content %}
 <body>
 <div class="info_container col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
-	<h3>룸메찾기 게시판</h3>
+	<h3 class="row justify-content-center">룸메찾기 게시판</h3>
     <form action="" method="POST" enctype="multipart/form-data">
 		<div class="info_container-box1">
             
