--- a/checkmate/templates/mypageScrap_dom.html
+++ b/checkmate/templates/mypageScrap_dom.html
@@ -45,15 +45,19 @@
                     <p class="p-2 col-5" style="margin-top:0;">글쓴이</p>
                     <p class="p-2 col-5" style="margin-top:0;">제목</p>
                 </div>
-                <div>
-                    {% for scrap in dom_scraps %}
-                        <input type="checkbox" name="written" class="mypage_list-checkbox checkbox_all" value="{{scrap.id}}">
-                        <p>{{ scrap.Domitory_Post.user_id.user_nickname }}</p>
-                        <p><a href="{% url 'domitoryView' scrap.Domitory_Post.id %}">{{ scrap.Domitory_Post.title }}</a></p>
-                    {% endfor %}
-                </div>
-    
-                <button class="mypage_delete">삭제하기</button>
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <div>
+                        {% for scrap in dom_scraps %}
+                            <input type="checkbox" name="check[]" class="mypage_list-checkbox checkbox_all" value="{{scrap.id}}">
+                            <p>{{ scrap.Domitory_Post.user_id.user_nickname }}</p>
+                            <p><a href="{% url 'domitoryView' scrap.Domitory_Post.id %}">{{ scrap.Domitory_Post.title }}</a></p>
+                        {% endfor %}
+                    </div>
+        
+                    <button type="submit" class="mypage_delete">삭제하기</button>
+                </form>
+                
                 <div>
                     <ul class="pagination">
                         <li class="page-item"><a class="page-link" href="#">◀</a></li>
@@ -105,7 +109,7 @@
 
         //체크박스 전체선택 기능
         function selectAll(selectAll) {
-            const checkboxes = document.getElementsByName('written');
+            const checkboxes = document.querySelectorAll('.mypage_list-checkbox');
 
             checkboxes.forEach((checkbox) => {
                 checkbox.checked = selectAll.checked;
