--- a/checkmate/templates/offcampusUpdate.html
+++ b/checkmate/templates/offcampusUpdate.html
@@ -5,7 +5,7 @@
 
 {% endblock %}
 {% block content %}
-<div class="info_container">
+<div class="info_container col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
 	<h3>자취 정보 공유 게시판</h3>
 
 	<form action="" method="post">
@@ -16,16 +16,18 @@
 			<input type="hidden" name="preface" value="{{ post.preface }}">
 			<input type="hidden" name="preface_2" value="{{ post.preface_2 }}">
 
-			<p>{{ post.preface }} | {{ post.preface_2 }}</p>
+			<div class="info_info btn">
+				<p style="color: #254074;">{{ post.preface }} | {{ post.preface_2 }}</p>
+			</div>	
 			<!-- 말머리 -->
 			<input name="title" type="text" placeholder="이곳에 제목을 작성하세요." value="{{ post.title }}">
 			<!-- 정보 게시판 제목 -->
 		</div>
-		<div class="info_container-box2">
-			<img src="" alt="profile_image">
+		<div class="info_container-box2 row">
+			<img src="" alt="profile_image" class="col-2 col-md-2 mb-2">
 			<!-- 프로필이미지 -->
-			<p>{{ user.user_nickname }}</p>
-			<input type="image" src="{{ post.image }}" alt="" name="image">
+			<p class="col-9 col-md-7 mb-2">{{ user.user_nickname }}</p>
+			<input type="file" name="image" id="" value="{{ post.image }}" class="col-12 col-md-3">
 			<!-- 사진 업로드 -->
 		</div>
 		<textarea class="body" name="content" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."
