--- a/static/css/community.css
+++ b/static/css/community.css
@@ -176,6 +176,13 @@ h3{
     white-space : nowrap;
 }
 
+table{
+    font-family: 'S-CoreDream-4Regular';
+    font-size: 14px;
+    width:100%;
+    /* min-height: 60vh; */
+}
+
 thead tr th:first-child{
     width: 15%;
 }
@@ -198,6 +205,9 @@ thead tr th:nth-child(3){
         margin-bottom: 20px;
     }
     #com_content-title, #com_content-info, #com_content-body{
+        font-size: 13px;
+    }
+    table{
         font-size: 13px;
     }
     thead tr th:first-child{
