마이페이지 th수정

--- a/checkmate/templates/mypageScrap_off.html
+++ b/checkmate/templates/mypageScrap_off.html
@@ -42,7 +42,7 @@
                             <thead class="thead-light">
                                 <tr>
                                     <th scope="col" style="width: 10%;"><input type="checkbox" name="written" id="checkbox" class="checkbox_all" value='selectall'
-                                        onclick='selectAll(this)'>/th>
+                                        onclick='selectAll(this)'></th>
                                     <th scope="col" style="width: 30%;"">글쓴이</th>
                                     <th scope="col" style="width: 60%;"">제목</th>
                                 </tr>
