survey 모달 버튼 수정

--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -13,7 +13,7 @@
         <div class="first_open_content">
             <p>룸메찾기 게시판에 처음 오셨군요!</p>
             <p>문답을 통해 <strong>내정보</strong>를 먼저 입력해 주세요.</p>
-            <button class="modal-btn" formaction="{% url 'survey' %}">문답하기 ></button>
+            <a class="modal-btn" href="{% url 'survey' %}">문답하기 ></a>
             <button class="modal-btn modal-btn-X" onclick="hideFirstModal()">X</button>
         </div>
     </div>
